2003-12-30  Terry <tbiggs@users.sf.net>

	* fixed bug #866548
	* added space to navigation toolbar by adding empty labels
	

2003-12-26  Terry <tbiggs@users.sf.net>

	* added tooltips to all items on the navigation 
	  toolbar in toolbar_nav.c
	

2003-12-25  Terry <tbiggs@users.sf.net>

	* moved Spell.idl and spell_gnome_spell.c form /main to /gnome2
	* made some changes in spell dialog - spell check starts when the dialog 
	  opens - removed the spell check button (start buttton)


2003-12-24  Andy <andyp@users.sf.net>

	* bumped to version 2.0.0 (yay! a real stable release!)
	* added French manual (thanks to Dominique Corbex)
	* updated French translation
	* disabled out-of-date translations for GNOME2 build 
	  (only en_GB and fr_FR are current)
	* cleaned English manual
	* added screenshots for English manual


2003-12-23  Terry <tbiggs@users.sf.net>

	* added new sidebar menu button
	* cleand up the html.c code
	* changed <back> and <foward> buttons on nav toolbar to stock buttons


2003-12-21  Terry <tbiggs@users.sf.net>

	* fixed bug #863854 that I caused when I fixed to build with
	  -DGTK_DISABLE_DEPRECATED -- still builds with -DGTK_DISABLE_DEPRECATED
	  

2003-12-19  Terry <tbiggs@users.sf.net>

	* fixed to build with -DGTK_DISABLE_DEPRECATED


2003-12-18  Terry <tbiggs@users.sf.net>

	* clicking on verse (link) in preview pane (sidebar or search_dialog) 
	  now displays verse in main text pane. 
	* fixed bug #862463

2003-12-17  Terry <tbiggs@users.sf.net>

	* fixed bug - Greek and Hebrew module not saved in setup_druid.
	  

2003-12-16  Andy <andyp@users.sf.net>

	* bumped to version 2.0.rc1


2003-12-15  Terry <tbiggs@users.sf.net>

	* fixed bug 860510
	* enabled footnote hints for osis modules


2003-12-14  Terry <tbiggs@users.sf.net>

	* added support for preverse headings
	* updated fr_FR.po from Dominique Corbex <dominique.corbex@wanadoo.fr>
	* applied patch from Dominique Corbex 


2003-12-13  Terry <tbiggs@users.sf.net>
