@@ -41,6 +41,11 @@
 #include "backend/sword.h"
 
 
+char *get_text(const char * module_name, const char *key)
+{
+	return backend_get_text(module_name, key);
+}
+
 
 int gbs_treekey_get_parent(unsigned long offset)
 {
